--- a/src/app/components/playGame/playGame.component.scss
+++ b/src/app/components/playGame/playGame.component.scss
@@ -11,6 +11,12 @@
 .now-playing {
     mat-card {
         text-align: center;
+        margin: 0 0 3em;
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
     }
 
     .btn-start-game {
