add support for multiple artists as playlist seeds

--- a/src/app/components/createPlaylist/createPlaylist.component.html
+++ b/src/app/components/createPlaylist/createPlaylist.component.html
@@ -4,7 +4,7 @@
     <mat-form-field>
       <input
         matInput
-        placeholder="Artist Name"
+        placeholder="Artist Names (up to 5 - comma separated)"
         [(ngModel)]="artist"
         name="artist"
       />
