change song artist separator from '-' to '/', add handling for missing artist id

--- a/src/app/components/playGame/playGame.component.html
+++ b/src/app/components/playGame/playGame.component.html
@@ -15,7 +15,7 @@
         [href]="currentSong.songUrl"
         target="_blank"
         (click)="audioPlayer.pause()"
-        >{{ currentSong.name }} - {{ currentSong.artist }}</a
+        >{{ currentSong.name }} / {{ currentSong.artist }}</a
       >
       <sup><mat-icon svgIcon="open-in-new"></mat-icon></sup>
     </mat-card-title>
