--- a/src/app/components/addPlayers/addPlayers.component.html
+++ b/src/app/components/addPlayers/addPlayers.component.html
@@ -16,24 +16,29 @@
 </section>
 <section *ngIf="this.players.data.length > 0" class="player-list">
   <h2>Players</h2>
-  <table mat-table [dataSource]="players" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let player">{{ player.name }}</td>
-    </ng-container>
+  <div class="table-container">
+    <table mat-table [dataSource]="players" class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let player">{{ player.name }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="remove">
-      <th mat-header-cell *matHeaderCellDef>Remove Player</th>
-      <td mat-cell *matCellDef="let player">
-        <button mat-raised-button (click)="removePlayer(player)" color="warn">
-          Remove
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="remove">
+        <th mat-header-cell *matHeaderCellDef>Remove Player</th>
+        <td mat-cell *matCellDef="let player">
+          <button mat-raised-button (click)="removePlayer(player)" color="warn">
+            Remove
+          </button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['name', 'remove']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'remove']"></tr>
-  </table>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="['name', 'remove']; sticky: true"
+      ></tr>
+      <tr mat-row *matRowDef="let row; columns: ['name', 'remove']"></tr>
+    </table>
+  </div>
 
   <button
     mat-raised-button
