--- a/src/app/components/playGame/playGame.component.html
+++ b/src/app/components/playGame/playGame.component.html
@@ -1,11 +1,11 @@
 <section class="now-playing">
   <h2>Now Playing</h2>
   <button
-    class="btn-start-game"
+    class="btn-continue"
     mat-raised-button
     (click)="startNextSong()"
-    *ngIf="!currentSong"
     color="primary"
+    *ngIf="!currentSong"
   >
     Start Game
   </button>
@@ -35,54 +35,59 @@
 </section>
 <section class="scoring">
   <h2>Scoring</h2>
-  <table mat-table [dataSource]="players" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let player">{{ player.name }}</td>
-    </ng-container>
+  <div class="table-container">
+    <table mat-table [dataSource]="players" class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let player">{{ player.name }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="score">
-      <th mat-header-cell *matHeaderCellDef>Score</th>
-      <td mat-cell *matCellDef="let player">{{ player.score }}</td>
-    </ng-container>
+      <ng-container matColumnDef="score">
+        <th mat-header-cell *matHeaderCellDef>Score</th>
+        <td mat-cell *matCellDef="let player">{{ player.score }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="increase-score">
-      <th mat-header-cell *matHeaderCellDef>Increase Score</th>
-      <td mat-cell *matCellDef="let player">
-        <button
-          mat-mini-fab
-          (click)="increasePlayerScore(player)"
-          [disabled]="!currentSong"
-        >
-          +
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="increase-score">
+        <th mat-header-cell *matHeaderCellDef>Increase Score</th>
+        <td mat-cell *matCellDef="let player">
+          <button
+            mat-mini-fab
+            (click)="increasePlayerScore(player)"
+            [disabled]="!currentSong"
+          >
+            +
+          </button>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="decrease-score">
-      <th mat-header-cell *matHeaderCellDef>Decrease Score</th>
-      <td mat-cell *matCellDef="let player">
-        <button
-          mat-mini-fab
-          (click)="decreasePlayerScore(player)"
-          color="warn"
-          [disabled]="!currentSong"
-        >
-          -
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="decrease-score">
+        <th mat-header-cell *matHeaderCellDef>Decrease Score</th>
+        <td mat-cell *matCellDef="let player">
+          <button
+            mat-mini-fab
+            (click)="decreasePlayerScore(player)"
+            color="warn"
+            [disabled]="!currentSong"
+          >
+            -
+          </button>
+        </td>
+      </ng-container>
 
-    <tr
-      mat-header-row
-      *matHeaderRowDef="['name', 'score', 'increase-score', 'decrease-score']"
-    ></tr>
-    <tr
-      mat-row
-      *matRowDef="
-        let row;
-        columns: ['name', 'score', 'increase-score', 'decrease-score']
-      "
-    ></tr>
-  </table>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="
+          ['name', 'score', 'increase-score', 'decrease-score'];
+          sticky: true
+        "
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="
+          let row;
+          columns: ['name', 'score', 'increase-score', 'decrease-score']
+        "
+      ></tr>
+    </table>
+  </div>
 </section>
