--- a/src/app/components/createPlaylist/createPlaylist.component.scss
+++ b/src/app/components/createPlaylist/createPlaylist.component.scss
@@ -6,6 +6,6 @@
     justify-content: center;
 }
 
-th.mat-column-artist, td.mat-column-artist {
-    padding-left: 8px;
+td, th{
+    padding: 0 4px;
 }
