--- a/src/app/components/createPlaylist/createPlaylist.component.html
+++ b/src/app/components/createPlaylist/createPlaylist.component.html
@@ -1,15 +1,11 @@
 <section class="create-playlist">
   <h2>Create a Playlist</h2>
   <form>
-    <mat-form-field>
-      <input
-        matInput
-        placeholder="Artist Names (up to 5 - comma separated)"
-        [(ngModel)]="artist"
-        name="artist"
-      />
+    <mat-form-field hintLabel="Artist Names (up to 5 - comma separated)">
+      <input matInput [(ngModel)]="artist" name="artist" />
       <button
         mat-raised-button
+        matSuffix
         (click)="createPlaylist()"
         [disabled]="loading"
         color="primary"
@@ -36,11 +32,6 @@
         <td mat-cell *matCellDef="let song">{{ song.artist }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="album">
-        <th mat-header-cell *matHeaderCellDef>Album</th>
-        <td mat-cell *matCellDef="let song">{{ song.album }}</td>
-      </ng-container>
-
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef>Remove Song</th>
         <td mat-cell *matCellDef="let song">
@@ -52,11 +43,11 @@
 
       <tr
         mat-header-row
-        *matHeaderRowDef="['name', 'artist', 'album', 'remove']; sticky: true"
+        *matHeaderRowDef="['name', 'artist', 'remove']; sticky: true"
       ></tr>
       <tr
         mat-row
-        *matRowDef="let row; columns: ['name', 'artist', 'album', 'remove']"
+        *matRowDef="let row; columns: ['name', 'artist', 'remove']"
       ></tr>
     </table>
   </div>
