--- a/src/app/components/playGame/playGame.component.scss
+++ b/src/app/components/playGame/playGame.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     height: 100%;
     flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    max-width: 80%;
 }
 
 section {
